--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
         </div>
         <ul class="list-inline">
-            <li class="list-inline-item"><a href="/index.html">Home</a></li>
-            <li class="list-inline-item"><a href="/templates/upcoming-ev.html">Upcoming Events</a></li>
-            <li class="list-inline-item"><a href="/templates/past-e.html">Past Events</a></li>
-            <li class="list-inline-item"><a href="/templates/contact.html">Contact</a></li>
-            <li class="list-inline-item"><a href="/templates/stats.html">Stats</a></li>
+            <li class="list-inline-item"><a href="./index.html">Home</a></li>
+            <li class="list-inline-item"><a href="./templates/upcoming-ev.html">Upcoming Events</a></li>
+            <li class="list-inline-item"><a href="./templates/past-e.html">Past Events</a></li>
+            <li class="list-inline-item"><a href="./templates/contact.html">Contact</a></li>
+            <li class="list-inline-item"><a href="./templates/stats.html">Stats</a></li>
         </ul>
         <p class="copyright">Karen A. Lettieri | Front-end Dev. © 2023</p>
     </footer>
